--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,27 @@
-# Created by https://www.toptal.com/developers/gitignore/api/eclipse,java
-# Edit at https://www.toptal.com/developers/gitignore?templates=eclipse,java
+### Java ###
+# Compiled class file
+*.class
 
-mybatis-config.xml
-log4j.xml
+# Log file
+*.log
 
-lecture
-target
-pom.properties
-.classpath
-MANIFEST.MF
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+#Server Directory
+/Servers
 
 ### Eclipse ###
 .metadata
@@ -59,52 +72,14 @@ local.properties
 # Code Recommenders
 .recommenders/
 
-# Annotation Processing
-.apt_generated/
-.apt_generated_test/
-
 # Scala IDE specific (Scala & Java development for Eclipse)
 .cache-main
 .scala_dependencies
 .worksheet
 
-# Uncomment this line if you wish to ignore the project description file.
-# Typically, this file would be tracked if it contains build/dependency configurations:
-#.project
-
-### Eclipse Patch ###
-# Spring Boot Tooling
-.sts4-cache/
-
-# Eclipse Core
-.project
-
-# IDT-specific (Eclipse Java Development Tools)
 .classpath
 
-### Java ###
-# Compiled class file
-*.class
+Eclipse Core
+.project
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# End of https://www.toptal.com/developers/gitignore/api/eclipse,java
+*/target/*
